@@ -1,3 +1,7 @@
+1999-08-17  Havoc Pennington  <hp@pobox.com>
+
+	* libgnome.h: comment about gnome-paper.h
+
 1999-08-14  Morten Welinder  <terra@diku.dk>
 
 	* gnome-config.c (access_config_extended): Add small cache.  Huge
